@@ -31,6 +31,7 @@ Version 1.5.7+svn:
    * A backspace in a textbox with selection, now clears the selection.
    * Scrollwheel mouses can scroll the new listboxes.
    * Fix a bug with temporary objects not being removed at next scenario
+   * Fix replays with empty starting positions.
 
 Version 1.5.7:
  * Campaigns:
